--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
-.App {
-  text-align: center;
+.buttons{
+    width:40%;
+    margin-left: 25%;
+    padding:5%;
+    position: absolute;
+    margin-top: 25%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 15%;
+    row-gap: 20%;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+button{
+    height:4rem;
+    border-radius: 5cm;
+    border:0px;
+    line-height: 42px;
+    padding: 0;
+    border: none;
+    transition: 0.3s;
+    font-size: 1.5rem;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+button:hover{
+    cursor: pointer;
+    background-color:rgb(128, 125, 125);
+    color:antiquewhite;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+body{
+    height:100vh;
 }
