--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
     margin-left: 25%;
     padding:5%;
     position: absolute;
-    margin-top: 25%;
+    margin-top: 30%;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 15%;
@@ -16,13 +16,13 @@ button{
     line-height: 42px;
     padding: 0;
     border: none;
-    transition: 0.3s;
+    transition: 0.4s;
     font-size: 1.5rem;
 }
 button:hover{
     cursor: pointer;
-    background-color:rgb(128, 125, 125);
-    color:antiquewhite;
+    background-color:#252525;
+    color:white;
 }
 body{
     height:100vh;
