--- a/src/Components/styles.css
+++ b/src/Components/styles.css
@@ -1,15 +1,16 @@
 .achtergrond1{
     z-index: -10;
     filter: blur(0px);
-    width:100%;
-    height:100vh;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
     position: absolute;
 }
 h1, p, h2{
     z-index: 10;
     color:white;
 }
-h1::selection {
+*::selection {
     color:red;
     background: yellow;
 }
