--- a/src/Components/styles.css
+++ b/src/Components/styles.css
@@ -18,12 +18,18 @@ h1, p, h2{
 }
 h1{
     font-size: 5rem;
+    font-family: 'raleway';
+    width:80%;
+    margin: auto;
 }
 input{
     font-size: 1.5rem;
+    font-family: 'raleway';
+    margin-top: 1%;
 }
 p{
     font-size: 3rem;
+    font-family: 'raleway';
 }
 span{
     font-family: 'Orbitron', sans-serif;
